# forgebox

./: .air.toml  .env.example  .gitignore  .golangci.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  forgebox.example.yaml  go.mod  go.sum
.claude/commands/: develop.md  review.md
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml
.github/workflows/: go.yml  web.yml
cmd/fb-agent/: main.go
cmd/forgebox/: main.go
deploy/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
deploy/systemd/: forgebox.service
desktop/: index.html  package.json  vite.config.ts
desktop/.devcontainer/: Dockerfile  devcontainer.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: auth.rs  commands.rs  main.rs  settings.rs
docs/: architecture.md  plugin-development.md  security-model.md
docs/plans/: 2026-04-20-brain-feature.md  2026-04-27-anthropic-providers.md
docs/specs/: 2026-04-20-brain-feature-design.md  2026-04-27-anthropic-providers-design.md
internal/agent/: agent.go
internal/auth/: auth.go  auth_test.go
pkg/sdk/: brain.go  (+6 more)
scripts/: build-rootfs.sh  dev-down.sh  dev-up.sh  dev.sh  setup-kvm.sh
specs/: 1.0.0-agents.md  2.0.0-storage.md  3.0.0-providers.md  4.0.0-realtime.md  5.0.0-management-tools.md  6.0.0-chat-formatter.md
web/: DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts  vitest.config.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: main.rs
(+219 files in other folders)
