[package]
name = "forgebox-dashboard"
version = "0.1.0"
description = "ForgeBox Dashboard"
edition = "2021"

[lib]
name = "forgebox_dashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
